--- a/NP_Config/Dictionary_DarkStyle.xaml
+++ b/NP_Config/Dictionary_DarkStyle.xaml
@@ -379,6 +379,11 @@
         <Setter Property="FontSize" Value="10"/>
     </Style>
 
+    <Style x:Key="TextBlockStyle_Type5" TargetType="TextBlock">
+        <Setter Property="Foreground" Value="{StaticResource Color_4}"/>
+        <Setter Property="FontSize" Value="13"/>
+    </Style>
+
     <!-- TEXTBOX -->
     <Style x:Key="TextBoxStyle_Type1" TargetType="TextBox">
         <Setter Property="Foreground" Value="{StaticResource Color_1}" />
