--- a/NP_Config/WorkPage.xaml
+++ b/NP_Config/WorkPage.xaml
@@ -4,7 +4,7 @@
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
       mc:Ignorable="d" 
-      d:DesignHeight="440" d:DesignWidth="1000"
+      d:DesignHeight="450" d:DesignWidth="1000"
       Title="WorkPage">
 
     <Grid UseLayoutRounding="True" Style="{DynamicResource GridStyle_Type2}">
@@ -44,7 +44,7 @@
                             </Grid.RowDefinitions>
 
                             <Grid Grid.Row="0">
-                                <TextBlock Text="Адреса датчиков модуля NP"  HorizontalAlignment="Center" VerticalAlignment="Center"  Style="{DynamicResource TextBlockStyle_Type3}" TextAlignment="Center"/>
+                                <TextBlock Text="Адреса датчиков модуля NP"  HorizontalAlignment="Center" VerticalAlignment="Center"  Style="{DynamicResource TextBlockStyle_Type5}" TextAlignment="Center"/>
                             </Grid>
                             <Grid Grid.Row="1">
                                 <Grid.ColumnDefinitions>
@@ -113,7 +113,7 @@
                                 </Grid.RowDefinitions>
 
                                 <Grid Grid.Row="0">
-                                    <TextBlock Text="Конфигурация участков" Style="{DynamicResource TextBlockStyle_Type3}" HorizontalAlignment="Center" VerticalAlignment="Center" TextAlignment="Center"/>
+                                    <TextBlock Text="Конфигурация участков" Style="{DynamicResource TextBlockStyle_Type5}" HorizontalAlignment="Center" VerticalAlignment="Center" TextAlignment="Center"/>
                                 </Grid>
                                 <Grid Grid.Row="1">
                                     <Grid.ColumnDefinitions>
@@ -152,7 +152,7 @@
                                             <RowDefinition Height="20"></RowDefinition>
                                             <RowDefinition></RowDefinition>
                                         </Grid.RowDefinitions>
-                                        <Grid Grid.Row="0">
+                                        <Grid Grid.Row="0" x:Name="UCH_ZR_Left_Title" Visibility="Visible">
                                             <TextBlock Text="Адрес"  Height="20" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="0,0,100,0" Style="{DynamicResource TextBlockStyle_Type3}" TextAlignment="Center"/>
                                             <TextBlock Text="NP"  Height="20" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="0,0,0,0" Style="{DynamicResource TextBlockStyle_Type3}" TextAlignment="Center"/>
                                             <TextBlock Text="Канал"  Height="20" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="100,0,0,0" Style="{DynamicResource TextBlockStyle_Type3}" TextAlignment="Center"/>
@@ -174,7 +174,7 @@
                                             <RowDefinition Height="20"></RowDefinition>
                                             <RowDefinition></RowDefinition>
                                         </Grid.RowDefinitions>
-                                        <Grid Grid.Row="0">
+                                        <Grid Grid.Row="0" x:Name="UCH_ZR_Right_Title" Visibility="Visible">
                                             <TextBlock Text="Адрес"  Height="20" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="0,0,100,0" Style="{DynamicResource TextBlockStyle_Type3}" TextAlignment="Center"/>
                                             <TextBlock Text="NP"  Height="20" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="0,0,0,0" Style="{DynamicResource TextBlockStyle_Type3}" TextAlignment="Center"/>
                                             <TextBlock Text="Канал"  Height="20" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="100,0,0,0" Style="{DynamicResource TextBlockStyle_Type3}" TextAlignment="Center"/>
@@ -186,10 +186,16 @@
                                 </Grid>
                             </Grid>
                             <Grid Grid.Column="1">
-                                <TextBlock Text="Добавлено участков: 0"  Height="20" HorizontalAlignment="Center" VerticalAlignment="Top" Margin="0,5,0,0" Style="{DynamicResource TextBlockStyle_Type3}" TextAlignment="Center"/>
-                                <WrapPanel x:Name="WrapPanel_UCH" HorizontalAlignment="Center" Margin="0,25,0,0">
-
-                                </WrapPanel>
+                                <Grid.RowDefinitions>
+                                    <RowDefinition Height="30"></RowDefinition>
+                                    <RowDefinition Height="*"></RowDefinition>
+                                </Grid.RowDefinitions>
+                                <Grid Grid.Row="0">
+                                    <TextBlock x:Name="UCH_All_Count" Text="Добавлено участков: 0" HorizontalAlignment="Center" VerticalAlignment="Center"  Style="{DynamicResource TextBlockStyle_Type5}" TextAlignment="Center"/>
+                                </Grid>
+                                <Grid Grid.Row="1" Margin="0,5,0,0">
+                                    <WrapPanel x:Name="WrapPanel_UCH" HorizontalAlignment="Center"/>
+                                </Grid>
                             </Grid>
                         </Grid>
                     </Border>
