--- a/NP_Config/MainWindow.xaml
+++ b/NP_Config/MainWindow.xaml
@@ -25,15 +25,41 @@
 
                 <Grid Grid.Column="1" x:Name="WorkMainPage"  MouseDown="Grid_MouseDown" Style="{DynamicResource GridStyle_Type1}">
                     <Grid.RowDefinitions>
-                        <RowDefinition Height="50"></RowDefinition>
+                        <RowDefinition Height="40"></RowDefinition>
                         <RowDefinition Height="*"></RowDefinition>
                         <RowDefinition Height="30"></RowDefinition>
                     </Grid.RowDefinitions>
 
                     <Grid Grid.Row="0" Style="{DynamicResource GridStyle_Type2}">
-                        <Button Style="{DynamicResource ButtonStyle_Window_Minimizate}" Click="Window_Minimizate_Click" Width="22" Height="24" VerticalAlignment="Top" HorizontalAlignment="Right" Margin="0,3,53,0"/>
-                        <Button Style="{DynamicResource ButtonStyle_Window_All_Size}" Click="Window_All_Size_Click" Width="22" Height="24" VerticalAlignment="Top" HorizontalAlignment="Right" Margin="0,3,30,0"/>
-                        <Button Style="{DynamicResource ButtonStyle_Window_Close}" Click="Window_Close_Click" Width="22" Height="24" VerticalAlignment="Top" HorizontalAlignment="Right" Margin="0,3,8,0"/>
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition></ColumnDefinition>
+                            <ColumnDefinition></ColumnDefinition>
+                            <ColumnDefinition></ColumnDefinition>
+                            <ColumnDefinition></ColumnDefinition>
+                            <ColumnDefinition></ColumnDefinition>
+                            <ColumnDefinition></ColumnDefinition>
+                            <ColumnDefinition Width="150"></ColumnDefinition>
+                        </Grid.ColumnDefinitions>
+                        <Grid Grid.Column="0">
+                            <Button Content="Просмотр" Height="30" Width="120" Style="{DynamicResource ButtonStyle_Type2}"/>
+                        </Grid>
+                        <Grid Grid.Column="1">
+                            <Button Content="Открыть" Height="30" Width="120" Style="{DynamicResource ButtonStyle_Type2}"/>
+                        </Grid>
+                        <Grid Grid.Column="2">
+                            <Button Content="Сохранить" Height="30" Width="120" Style="{DynamicResource ButtonStyle_Type2}"/>
+                        </Grid>
+                        <Grid Grid.Column="3">
+                            <Button Content="Сохранить всё" Height="30" Width="120" Style="{DynamicResource ButtonStyle_Type2}"/>
+                        </Grid>
+                        <Grid Grid.Column="4">
+                            <Button Content="Очистить страницу" Height="30" Width="120" Style="{DynamicResource ButtonStyle_Type2}"/>
+                        </Grid>
+                        <Grid Grid.Column="6">
+                            <Button Style="{DynamicResource ButtonStyle_Window_Minimizate}" Click="Window_Minimizate_Click" Width="22" Height="24" VerticalAlignment="Top" HorizontalAlignment="Right" Margin="0,3,53,0"/>
+                            <Button Style="{DynamicResource ButtonStyle_Window_All_Size}" Click="Window_All_Size_Click" Width="22" Height="24" VerticalAlignment="Top" HorizontalAlignment="Right" Margin="0,3,30,0"/>
+                            <Button Style="{DynamicResource ButtonStyle_Window_Close}" Click="Window_Close_Click" Width="22" Height="24" VerticalAlignment="Top" HorizontalAlignment="Right" Margin="0,3,8,0"/>
+                        </Grid>
                     </Grid>
 
                     <Grid Grid.Row="1" Style="{DynamicResource GridStyle_Type2}">
@@ -41,9 +67,16 @@
                     </Grid>
 
                     <Grid Grid.Row="2" Style="{DynamicResource GridStyle_Type2}" Margin="0,1,0,0">
-
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="100"></ColumnDefinition>
+                            <ColumnDefinition></ColumnDefinition>
+                            <ColumnDefinition></ColumnDefinition>
+                            <ColumnDefinition></ColumnDefinition>
+                        </Grid.ColumnDefinitions>
+                        <Grid Grid.Column="0">
+                            <Button Content="Светлая тема" Height="20" Margin="5,0,0,0" Style="{DynamicResource ButtonStyle_Type2}"/>
+                        </Grid>
                     </Grid>
-
                 </Grid>
             </Grid>
         </Border>
