--- a/NP_Config/App.xaml
+++ b/NP_Config/App.xaml
@@ -7,6 +7,7 @@
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
                 <ResourceDictionary Source="Dictionary_DarkStyle.xaml"/>
+                <ResourceDictionary Source="Dictionary_WhiteStyle.xaml"/>
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </Application.Resources>
